src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Relationship_to_child__c</fullName>
        <description>This field is used to store the relationship of the person who submits the Wish Kid details</description>
        <label>Relationship To Child</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent/Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Member/Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Responds_to_treatment_with_normal_health__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wish Child responds to standard treatment which approximates normal health.</description>
        <inlineHelpText>Wish Child responds to standard treatment which approximates normal health.</inlineHelpText>
        <label>Responds To Treatment With Normal Health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_of_complications_premature_death__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wish Child has an non-progressive condition that may have a risk of complications and/or risk of premature death.</description>
        <inlineHelpText>Wish Child has an non-progressive condition that may have a risk of complications and/or risk of premature death.</inlineHelpText>
        <label>Risk Of Complications &amp; Premature Death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SD1_Condition_Description__c</fullName>
        <description>It holds the condition description for Secoundary Diagnosis 1</description>
        <label>Secondary Diagnosis 1 Cond Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SD1_ICD_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It contains ICD code for Secondary Diagnosis 1</description>
        <label>Secondary Diagnosis 1 ICD-10 Code</label>
        <referenceTo>ICD_Codes__c</referenceTo>
        <relationshipLabel>Leads (Diagnosis 1 ICD-10 Code)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD2_Condition_Description__c</fullName>
        <description>It holds the condition description for Secoundary Diagnosis 2</description>
        <label>Secondary Diagnosis 2 Cond Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SD2_ICD_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It contains ICD code for Secondary Diagnosis 2</description>
        <label>Secondary Diagnosis 2 ICD-10 Code</label>
        <referenceTo>ICD_Codes__c</referenceTo>
        <relationshipLabel>Leads (Secondary Diagnosis 2 ICD-10 Code)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD3_Condition_Description__c</fullName>
        <description>It holds the condition description for Secoundary Diagnosis 3</description>
        <label>Secondary Diagnosis 3 Cond Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SD3_ICD_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It contains ICD code for Secondary Diagnosis 3</description>
        <label>Secondary Diagnosis 3 ICD-10 Code</label>
        <referenceTo>ICD_Codes__c</referenceTo>
        <relationshipLabel>Leads (Secondary Diagnosis 3 ICD-10 Code)</relationshipLabel>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <formula>PD_ICD_Code__r.Short_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sibling_Detail__c</fullName>
        <description>It will hold the sibling name and age details.</description>
        <label>Sibling Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>State_Picklist__c</fullName>
        <description>It holds the States Picklist</description>
        <globalPicklist>State_Picklist</globalPicklist>
        <label>Hidden State</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strokes__c</fullName>
        <description>It will hold the value of Travel Algorithm additional questions. Hidden field.</description>
        <label>Hidden Strokes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <description>This field value is updated when the part A case status is In progress.</description>
        <label>Sub Status</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Wish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Diagnosis Verification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify whether the record is a test record</description>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>This_Statement_Describes_My_Patient__c</fullName>
        <description>It will hold the detail about the patient</description>
        <label>This Statement Describes My Patient</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Travel_algorithm__c</fullName>
        <description>Used to store travel checklists</description>
        <label>Hidden Travel algorithm</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Treating_Medical_Professional_Contact_Id__c</fullName>
        <description>It is an hidden field. Storing the original Treating Medical Professional Contact Id. So while converting the lead, we can create a relationship under this Record instead of creating dup Treating  medical professional contact. we are capturing value for this field on Find Duplicate page.</description>
        <label>Hidden Treating Med Prof Contact Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treating_Medical_Professional_Email__c</fullName>
        <description>This field will hold the Treating Medical Professional Email Address</description>
        <label>Treating Medical Professional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Treating_Medical_Professional_Fax__c</fullName>
        <description>This field will hold the Treating Medical Professional  Fax number</description>
        <label>Treating Medical Professional Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Treating_Medical_Professional_First_Name__c</fullName>
        <description>This field will hold the Treating Medical Professional First Name</description>
        <label>Treating Medical Professional First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treating_Medical_Professional_Last_Name__c</fullName>
        <description>This field will hold the details about Treating Medical Professional Name</description>
        <label>Treating Medical Professional Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treating_Medical_Professional_Phone__c</fullName>
        <description>This field will hold the Treating Medical Professional Phone number</description>
        <label>Treating Medical Professional Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Treatment_Subspecialty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to display treatment  subspecialty from condition description object</description>
        <label>Treatment Subspecialty</label>
        <referenceTo>Condition_Description__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Treatment_may_be_feasible_but_can_fail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wish Child has a conditions for which curative treatment may be feasible but can fail</description>
        <inlineHelpText>Wish Child has a condition for which curative treatment may be feasible but can fail (e.g., cancer, irreversible organ failure, treatment failure does not include non-compliance)</inlineHelpText>
        <label>Treatment May Be Feasible But Can Fail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treatment_may_prolong_normal_activities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wish Child has a condition where premature death is probable, but frequent and/or long periods of intensive treatment may prolong and allow participation in normal activities</description>
        <inlineHelpText>Wish Child has a progressive condition without curative treatment options in which debilitation may extend over many years. (e.g., neurodegenerative, severe treatment resistant epilepsy, metabolic disease)</inlineHelpText>
        <label>Treatment May Prolong-Normal Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ventilator__c</fullName>
        <description>It will hold the value of Ventilator travel algorithm.</description>
        <label>Hidden Ventilator</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_family_s_primary_spoken_la__c</fullName>
        <description>PRIMARY_LANGUAGE</description>
        <label>What is the familyâ€™s primary spoken la</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_family_s_primary_spoken_lang__c</fullName>
        <description>Primary language of the wish family.</description>
        <label>Family Primary Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Sign Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French and French Creole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tagalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Why_do_you_feel_would_be_eligible_Wish__c</fullName>
        <description>It will hold details about medical equipment</description>
        <label>Why do you feel  would be eligible Wish?</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_Child_s_Condition_Deteriorate__c</fullName>
        <description>It will hold detail about whether they expect this child&apos;s condition will significantly deteriorate in the next 3-6 months.</description>
        <label>Will Child&apos;s Condition Deteriorate?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wish_Family_ContactId__c</fullName>
        <description>It is an hidden field. Storing the original Wish Family Contact Id. So while converting the lead, we can create a relationship under this wish Family Record instead of creating dup wish family. we are capturing value for this field on Find Duplicate page.</description>
        <label>Hidden Wish Family ContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isApprove__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will allow the duplicate lead</description>
        <label>Hidden isApprove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to verify the document is signed or not from docusign.</description>
        <label>Hidden isSign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Family_Aware_of_Referral__c</fullName>
        <description>This field indicate that Child Family aware of Referral at MAWA</description>
        <label>Is Family Aware Of Referral?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The batch this lead was created from.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyCity__c</fullName>
        <label>Company City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyCountry__c</fullName>
        <label>Company Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyPostalCode__c</fullName>
        <label>Company Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyState__c</fullName>
        <label>Company State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyStreet__c</fullName>
        <label>Company Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_Siblings__c</fullName>
        <description>It hold the count of siblings.</description>
        <label># of Siblings</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>unique_wish_identifier__c</fullName>
        <description>To store the unique wish identifier</description>
        <label>Unique Wish Identifier</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>Alabama_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>ChapterName__c</columns>
        <columns>Any_medical_reason_for_moving_quickly__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish Alabama</value>
        </filters>
        <label>Alabama</label>
        <sharedTo>
            <group>Alabama</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alaska_Washington_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>ChapterName__c</columns>
        <columns>Any_medical_reason_for_moving_quickly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish Alaska &amp; Washington</value>
        </filters>
        <label>Alaska &amp; Washington</label>
        <sharedTo>
            <group>Alaska_Washington</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Created_Date_Time__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
        <sharedTo>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>America_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Test_Record__c</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish America</value>
        </filters>
        <label>America</label>
        <sharedTo>
            <group>America</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Arizona_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>ChapterName__c</columns>
        <columns>Any_medical_reason_for_moving_quickly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>contains</operation>
            <value>Make-A-Wish Arizona</value>
        </filters>
        <label>Arizona</label>
        <sharedTo>
            <group>Arizona</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_California_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>ChapterName__c</columns>
        <columns>Any_medical_reason_for_moving_quickly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish Central California</value>
        </filters>
        <label>Central California</label>
        <sharedTo>
            <group>Central_California</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_New_York_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>ChapterName__c</columns>
        <columns>Any_medical_reason_for_moving_quickly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish Central New York</value>
        </filters>
        <label>Central New York</label>
        <sharedTo>
            <group>Central_New_York</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Northern_Florida_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>ChapterName__c</columns>
        <columns>Any_medical_reason_for_moving_quickly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish Central &amp; Northern Florida</value>
        </filters>
        <label>Central &amp; Northern Florida</label>
        <sharedTo>
            <group>Central_Northern_Florida</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_South_Texas_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>ChapterName__c</columns>
        <columns>Any_medical_reason_for_moving_quickly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish Central &amp; South Texas</value>
        </filters>
        <label>Central &amp; South Texas</label>
        <sharedTo>
            <group>Central_South_Texas</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Western_North_Carolina_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>ChapterName__c</columns>
        <columns>Any_medical_reason_for_moving_quickly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish Central&amp;Western North Carolina</value>
        </filters>
        <label>Central &amp; Western North Carolina</label>
        <sharedTo>
            <group>Central_Western_North_Carolina</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Colorado_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>ChapterName__c</columns>
        <columns>Any_medical_reason_for_moving_quickly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish Colorado</value>
        </filters>
        <label>Colorado</label>
        <sharedTo>
            <group>Colorado</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Connecticut_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>ChapterName__c</columns>
        <columns>Any_medical_reason_for_moving_quickly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish Connecticut</value>
        </filters>
        <label>Connecticut</label>
        <sharedTo>
            <group>Connecticut</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>East_Tennessee_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>ChapterName__c</columns>
        <columns>Any_medical_reason_for_moving_quickly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish East Tennessee</value>
        </filters>
        <label>East Tennessee</label>
        <sharedTo>
            <group>East_Tennessee</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Eastern_North_Carolina_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>ChapterName__c</columns>
        <columns>Any_medical_reason_for_moving_quickly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish Eastern North Carolina</value>
        </filters>
        <label>Eastern North Carolina</label>
        <sharedTo>
            <group>Eastern_North_Carolina</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Georgia_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>ChapterName__c</columns>
        <columns>Any_medical_reason_for_moving_quickly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChapterName__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish Georgia</value>
        </filters>
        <label>Georgia</label>
        <sharedTo>
            <group>Georgia</group>
            <group>National_Office</group>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Lead_Address_Phone_and_Gender_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR((Street == Null || City == Null || PostalCode == Null || State == Null  ),
(Text(Gender__c) == Null),Phone== Null),$Profile.Name != &apos;Integration&apos;,(Text(Status) == &apos;Referred&apos;),(Text(RFI_Form_Info_Hidden__c) == Null || Id != Null))</errorConditionFormula>
        <errorMessage>Please Enter Full Address (City, State, Street and Postal Code), Phone Number  and Gender.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Address_Validation</fullName>
        <active>false</active>
        <description>Whenever lead is created/updated with Referred status,Address  is mandatory</description>
        <errorConditionFormula>(Street == Null || City == Null || PostalCode == Null || State == Null) &amp;&amp; (Text(Status) == &apos;Referred&apos;) &amp;&amp; (Text(RFI_Form_Info_Hidden__c) == Null || Id != Null) &amp;&amp; Migrated_Record__c == false</errorConditionFormula>
        <errorMessage>Please Enter Full Address (City, State, Street and Postal Code)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Chapter_Validation</fullName>
        <active>false</active>
        <description>if users chapter !=chapter of lead make unique wish identifier required</description>
        <errorConditionFormula>($User.Account_Name__c !=  ChapterName__r.Name) &amp;&amp; (unique_wish_identifier__c ==null || Len(unique_wish_identifier__c )&lt;1)  &amp;&amp; (Text(RFI_Form_Info_Hidden__c) == Null || Id != Null) &amp;&amp; Migrated_Record__c == false &amp;&amp;  $Profile.Name != &apos;Wish Referral Form Profile&apos;</errorConditionFormula>
        <errorDisplayField>unique_wish_identifier__c</errorDisplayField>
        <errorMessage>if users chapter and chapter of lead is not equal then unique wish identifier is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Child_Age_Validation</fullName>
        <active>false</active>
        <description>Whenever lead is created/updated with Inquiry status, child age is mandatory.</description>
        <errorConditionFormula>Text(Child_Age__c) == Null &amp;&amp; Text(Status) == &apos;Inquiry&apos; &amp;&amp; Text(RFI_Form_Info_Hidden__c) == Null &amp;&amp;  Migrated_Record__c == false</errorConditionFormula>
        <errorDisplayField>Child_Age__c</errorDisplayField>
        <errorMessage>Please Enter Child Age</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_DOB_Referral_Validation</fullName>
        <active>true</active>
        <description>When lead is changed to Referred, DOB is mandatory.</description>
        <errorConditionFormula>Text(Status) == &apos;Referred&apos; &amp;&amp;  DOB__c == Null &amp;&amp;   (Text(RFI_Form_Info_Hidden__c) == Null || Id != Null) &amp;&amp;  $Profile.Name  != &apos;Integration&apos;</errorConditionFormula>
        <errorDisplayField>DOB__c</errorDisplayField>
        <errorMessage>Please Enter DOB</errorMessage>
    </validationRules>
</CustomObject>